2013-05-03  Kevin Buettner  <kevinb@redhat.com>

	* rl78-tdep.c (rl78_register_reggroup_p): Include SP in the
	`save' and `restore' register groups.  Don't include SPL
	or SPH in these groups.
	(rl78_dwarf_reg_to_regnum):  Adjust mapping for
	RL78_PC_REGNUM.  Add mappings for RL78_PSW_REGNUM,
	RL78_ES_REGNUM, and RL78_CS_REGNUM.
	(rl78_gdbarch_init): Set `dwarf2_addr_size' to 4.  Invoke
	dwarf2_append_unwinders().

2013-05-03  Philippe Waroquiers  <philippe.waroquiers@skynet.be>

	* break-catch-sig.c (signal_catchpoint_breakpoint_hit): Do not
	ignore SIGINT and SIGTRAP in case these internal signals are
	caught explicitely.

2013-05-01  Joel Brobecker  <brobecker@adacore.com>

	* darwin-nat.c (darwin_read_write_inferior): Change types
	of parameters rdaddr and wraddr to "gdb_byte *". Change type
	of copy_count to "mach_msg_type_number_t".
	(darwin_read_dyld_info): Change type of parameter
	rdaddr to "gdb_byte *".

2013-05-01  Joel Brobecker  <brobecker@adacore.com>

	* solib-ia64-hpux.c (ia64_hpux_read_dynamic_info): Change cast
	of &info->load_map from "char *" to "gdb_byte *".

2013-05-01  Joel Brobecker  <brobecker@adacore.com>

	* ia64-tdep.c (ia64_access_fpreg): Change cast of val
	from "char *" to "gdb_byte *".
	(ia64_access_rse_fpreg, ia64_access_mem): Likewise.

2013-04-30  Doug Evans  <dje@google.com>

	* dwarf2read.c (lookup_dwo_unit): Return NULL if DWO not found.
	(init_cutu_and_read_dies): Flag a complaint, not error, for bad
	DWO stub.  If DWO isn't found, just use stub.
	(lookup_dwo_cutu): Don't try DWO if there's a DWP file.

	* dwarf2read.c (dw2_find_symbol_file): Initialize filename before
	calling init_cutu_and_read_dies.

2013-03-27  Walfred Tedeschi  <walfred.tedeschi@intel.com>

	* target-descriptions.c (maint_print_c_tdesc_cmd):
	Add case to parse structures as register types and
	bitfields.

2013-04-30  Walfred Tedeschi  <walfred.tedeschi@intel.com>

	* MAINTAINERS (Write After Approval): Add myself to the list.
